--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -10,12 +10,12 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "深圳美食图鉴",
+    "navigationBarTitleText": "交大小帮手",
     "navigationBarTextStyle": "black"
   },
   "permission": {
     "scope.userLocation": {
-      "desc": "你的位置信息将用于添加新的店铺"
+      "desc": "你的位置信息将用于创建新的攻略"
     }
   }
 }
